<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="avatar_description">Author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_views">Views</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="post_input_text_hint">Input text</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="add_post">Add post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="text">Text</string>
    <string name="dateName">Today</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\n If you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="new_posts">New posts</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_content_error">Content is empty</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="description_post_attachment">Attachment</string>
    <string name="description_pick_photo">Pick image</string>
    <string name="description_image_full_screen">Full screen</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_posted">%1$s posted a new post</string>
    <string name="notification_user_login">Login user by id %1$s</string>
    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="error_notification_title">You are using an old version of the application</string>
    <string name="error_notification_text">Please update the application for correct operation</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_name">Sign in</string>
    <string name="login">Login</string>
    <string name="sign_name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Enter</string>
    <string name="sign_up_name">Sign up</string>
    <string name="sign_up_button">Enter</string>
    <string name="registration">Register</string>
    <string name="repeat_enter_password">Repeat Enter Password</string>
    <string name="password_error">Wrong password</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="more_old">More old</string>


</resources>