<?xml version="1.0" encoding="utf-8"?>
  <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".activity.EditPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:textSize="24sp"
            android:hint="@string/post_input_text_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="@dimen/commonSpacingMedium"
            tools:ignore="MissingConstraints"
            tools:text="@tools:sample/lorem[50]" />

        <FrameLayout
            android:id="@+id/photoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

          <ImageView
              android:id="@+id/photo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:contentDescription="@string/description_photo"
              tools:srcCompat="@tools:sample/avatars[2]" />

          <Button
              android:id="@+id/deletePhoto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom|center_horizontal"
              android:text="@string/clear" />

        </FrameLayout>

      </LinearLayout>

    </ScrollView>


  <LinearLayout
      android:id="@+id/bottomAppBar"
      style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom">

    <ImageView
        android:id="@+id/pickPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/description_pick_photo"
        android:padding="@dimen/commonSpacingMedium"
        android:src="@drawable/ic_attach_file_48" />


    <ImageView
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/description_take_photo"
        android:padding="@dimen/commonSpacingMedium"
        android:src="@drawable/ic_baseline_photo_camera_48" />

  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>